--- a/Lab3/pom.xml
+++ b/Lab3/pom.xml
@@ -11,6 +11,18 @@
         <maven.compiler.target>22</maven.compiler.target>
         <exec.mainClass>mephi.b22901.lab3.Lab3</exec.mainClass>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.3</version>
+        </dependency> 
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>2.2</version>            
+        </dependency>
+    </dependencies>   
     <build>
         <plugins>
             <!-- Maven Shade Plugin -->
